[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/background.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/items_spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/label_score.gd" type="Script" id=4]
[ext_resource path="res://scripts/draw_lifes.gd" type="Script" id=5]
[ext_resource path="res://sprites/hud_life.png" type="Texture" id=6]
[ext_resource path="res://scripts/camera.gd" type="Script" id=7]
[ext_resource path="res://scenes/shower.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/main.gd" type="Script" id=9]
[ext_resource path="res://sprites/gui/btn_play.png" type="Texture" id=10]
[ext_resource path="res://sprites/gui/btn_play_big.png" type="Texture" id=11]
[ext_resource path="res://sprites/gui/btn_pause.png" type="Texture" id=12]
[ext_resource path="res://sprites/gui/btn_pause_big.png" type="Texture" id=13]

[node name="main" type="Node2D"]
pause_mode = 2
script = ExtResource( 9 )

[node name="bg" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 320, 240 )
texture = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 289.867, 417.011 )

[node name="items_spawner" parent="." instance=ExtResource( 3 )]
pause_mode = 1

[node name="shower" parent="." instance=ExtResource( 8 )]
pause_mode = 2
position = Vector2( 320, 0 )

[node name="camera" type="Camera2D" parent="."]
pause_mode = 2
anchor_mode = 0
current = true
script = ExtResource( 7 )

[node name="gui" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 15

[node name="HUD" type="CanvasLayer" parent="gui"]
pause_mode = 1

[node name="score_label" type="Label" parent="gui/HUD"]
pause_mode = 1
margin_left = 498.757
margin_top = 9.48528
margin_right = 635.757
margin_bottom = 23.4853
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "score: 0"
align = 2
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifes" type="Node2D" parent="gui/HUD"]
pause_mode = 1
script = ExtResource( 5 )
item_life = ExtResource( 6 )

[node name="btn_play" type="TextureButton" parent="gui"]
pause_mode = 2
margin_left = 269.806
margin_top = 171.449
margin_right = 339.806
margin_bottom = 247.449
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 35, 38 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_pause" type="TextureButton" parent="gui"]
margin_left = 590.817
margin_top = 30.032
margin_right = 626.817
margin_bottom = 65.032
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="gui/btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="gui/btn_pause" to="." method="_on_btn_pause_pressed"]
